# tabber

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.pybuild/cpython3_3.12_tabber/: tabber-0.1.2-py3-none-any.whl
.pybuild/cpython3_3.12_tabber/scripts/: tabber
data/: com.github.clankerbuilt.Tabber.desktop
debian/: changelog  control  copyright  install  postinst  postrm  rules  tabber.postinst.debhelper  tabber.prerm.debhelper
src/tabber/: __init__.py  __main__.py  application.py  connection_dialog.py  file_transfer.py  psftp_backend.py  quick_connect.py  session.py  session_manager.py  sftp.py  snippets.py  terminal_tab.py  window.py
