[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabber"
version = "0.1.7"
description = "PuTTY session manager with tabbed terminals for Ubuntu"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.12"
authors = [
    {name = "George Cottrell", email = "georgecottrell@email.com"},
]
keywords = ["ssh", "putty", "terminal", "tabbed", "gtk4", "ubuntu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
dependencies = [
    "PyGObject>=3.48",
]

[project.urls]
Homepage = "https://github.com/Clanker-Built/tabber"
Repository = "https://github.com/Clanker-Built/tabber"
Issues = "https://github.com/Clanker-Built/tabber/issues"

[project.scripts]
tabber = "tabber.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
